# scaf

./: .clang-format  .gitignore  COPYING  Makefile  Makefile.am  README  Vagrantfile  configure.ac  libscaf.c  scaf-libgomp.patch  scaf.h  scafc.c  scafd.c
doc/: Makefile.am  Makefile.manpages  scafd.1  scafd.md  scafwrap.1  scafwrap.md
patches/: scaf-libgomp.patch  scaf-libgomp48.patch  scaf-libgomp49.patch  scaf-libiomp-20131209.patch  scaf-libiomp.patch  ugly-tilegx-patch-for-papi-5.0.1.patch
src/: Makefile.am  intpart.c  intpart.h  libscaf.c  libscafwrap.c  scaf.h  scafc.c  scafd.c  scafwrap.in  solaris_trace_utils.h
